css text styling

--- a/index.html
+++ b/index.html
@@ -5,10 +5,302 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../src/styles/reset.css">
+  <link rel="stylesheet" href="../src/styles/style.css">
   <title>The Renaissance Hustler</title>
 </head>
 
 <body>
+  <header>
+    <p>logo</p>
+    <button>Visit</button>
+    <div class="header">
+      <p class="highlight__name">Christophe Plantin</p>
+      <p class="the">The</p>
+      <h1> renaissance
+        hustler</h1>
+      <p class="cta__text">Experience His Legacy</p>
+    </div>
+  </header>
+  <main>
+    <section class="introduction">
+      <h2 class="hidden">Introduction</h2>
+      <div class="intro">
+        <p class="highlight__name gold">Plantin</p>
+        <p>was more than just a master printer:</p>
+        <ul class="about">
+          <li>Smart businessman</li>
+          <li>Catholic navigating religious conflict</li>
+          <li>Visionary who knew that knowledge was power</li>
+        </ul>
+      </div>
+      <p class="centered narrow">During the <strong>Renaissance</strong>, a time of great progress in art, science, and
+        ideas, one man stood out
+        as both a <strong>printer</strong> and an
+        <strong>entrepreneur</strong>:
+      </p>
+      <p class="highlight__name gold name">Christophe Plantin</p>
+      <div class="born">
+        <p>Born around <strong class="special__strong gold">1520</strong> in</p>
+        <div class="right__text">
+          <p><strong class="special__strong gold">France</strong></p>
+          <p>later based in</p>
+        </div>
+      </div>
+      <div>
+        <p>map</p>
+        <p class="antwerp">Antwerp</p>
+      </div>
+      <div>
+        <p>He lived through the <strong>Protestant Reformation</strong>, a time of religious conflict between Catholics
+          and Protestants, when
+          censorship was common. Despite these challenges, he built a <strong>successful printing empire</strong> and
+          left a lasting mark on
+          history.</p>
+        <p class="narrow__left">Plantin’s success was built on more than just <strong>strategy</strong>, it was also
+          about
+          <strong>craftsmanship</strong>.
+        </p>
+      </div>
+      <div>
+        <p class="officiana narrow__left gold">Officina
+          Plantiniana</p>
+        <p>map image</p>
+      </div>
+    </section>
+    <section class="interaction">
+      <p class="interaction__title">If you would be a printer <br> what would you choose?</p>
+      <p class="hint"><strong class="hint">Hint</strong>: <br>You have limited time to print</p>
+      <div class="book__choices">
+        <div class="interaction__choice">
+          <p>images</p>
+          <p>Printing 10 books</p>
+        </div>
+        <div class="interaction__choice">
+          <p>image</p>
+          <p>Printing 1 perfect book</p>
+        </div>
+      </div>
+    </section>
+    <section class="quality">
+      <h2>Quality
+        over
+        Quantity</h2>
+      <p>Many printers rushed to <strong>produce large quantities</strong>, Plantin focused on <strong>quality</strong>,
+        ensuring that his books stood out in an
+        increasingly competitive market.</p>
+      <p>image</p>
+      <p class="narrower">Printing a perfect book was
+        <br>a <strong>careful process</strong>.
+      </p>
+      <p>Each letter had to be set by hand, inked carefully, and pressed onto paper with absolute precision.
+
+      <p>A <strong>single mistake</strong> could mean redoing an entire page, wasting time and expensive materials.</p>
+      <div class="reputation">
+        <div class="half__line"></div>
+        <p class="reputation__text centered narrow">Plantin understood that reputation was everything in the printing
+          world.</p>
+        <p>If a book had errors, buyers would <strong>lose trust</strong> in the printer, and that could cause
+          <strong>financial ruin</strong>.
+        </p>
+      </div>
+    </section>
+    <section class="interaction">
+      <p class="interaction__title">Set letters for printing<br>Plantin’s name</p>
+      <p class="hint"><strong class="hint">Hint</strong>: <br>Letters used to be set upside down and mirror view.</p>
+    </section>
+    <section class="high__standards">
+      <div class="standards__intro">
+        <h3>High standards</h3>
+        <p>To maintain his high standards, Plantin hired the most skilled typesetters and invested in the best
+          materials:
+        </p>
+      </div>
+      <div class="materials">
+        <div class="material typefaces">
+          <p>High-quality metal typefaces</p>
+          <p>image</p>
+        </div>
+        <div class="material paper">
+          <p>Fine paper</p>
+          <p>image</p>
+        </div>
+        <div class="material ink">
+          <p>image</p>
+          <p>Durable ink</p>
+        </div>
+      </div>
+      <div class="respected">
+        <div class="center__line"></div>
+        <p>He was among the first to use <strong>Garamond-style fonts</strong>, which gave his books a refined and
+          <strong>elegant appearance</strong>.
+          His
+          meticulous approach earned him commissions from royalty, scholars, and the Catholic Church, making his
+          <strong>reputation</strong> as one of
+        </p>
+        <p class="highlight__name gold">Europe’s most respected printers.</p>
+      </div>
+    </section>
+    <section>
+      <p class="centered">One of his greatest achievements was</p>
+      <h3 class="gold">Polyglot Bible</h3>
+      <p>image</p>
+      <p class="about__polyglot">A massive project that required the printing of multiple languages on the same page
+        with perfect alignment.
+        This was an
+        extraordinary feat of precision and coordination, demonstrating Plantin’s ability to push the limits of printing
+        technology.</p>
+      <p>His dedication to quality made his printing house not just a business, but a center of Renaissance scholarship
+        and
+        innovation.</p>
+    </section>
+    <section class="interaction">
+      <p class="interaction__title">Guess in how many languages Polyglot bible was written?</p>
+      <p class="hint"><strong class="hint">Hint</strong>: <br>one digit</p>
+      <form class="languages" id="numberForm">
+        <label for="singleDigit"></label>
+        <input type="number" id="singleDigit" name="singleDigit" min="1" max="9" required>
+        <p class="hint">type in the number</p>
+        <button class="submit__button" type="submit">Check!</button>
+      </form>
+    </section>
+    <section class="hustles">
+      <h2>Plantin’s Hustles</h2>
+      <p class="narrow__left">To keep his business successful, Plantin had to be <strong>strategic</strong>.</p>
+      <p>While he presented himself as a <strong>faithful Catholic</strong>, he secretly expanded his business into
+        areas that were risky but
+        profitable.</p>
+      <p>Governments and the Catholic Church closely <strong>controlled books</strong>, even <strong>banning</strong>
+        those books they considered dangerous.
+        Printers who disobeyed these rules faced <strong>serious consequences</strong>, but Plantin was willing to take
+        these risks.</p>
+    </section>
+    <section class="interaction">
+      <p class="interaction__title">Choose which ones would be those consequences</p>
+      <p class="hint"><strong class="hint">Hint</strong>: <br>there are only 3 right options</p>
+      <div class="choices">
+        <div class="interaction__choice">
+          <p>image</p>
+          <p>Heavy fines</p>
+        </div>
+        <div class="interaction__choice">
+          <p>image</p>
+          <p>Death</p>
+        </div>
+        <div class="interaction__choice">
+          <p>image</p>
+          <p>Banishment</p>
+        </div>
+        <div class="interaction__choice">
+          <p>image</p>
+          <p>Public apology</p>
+        </div>
+        <div class="interaction__choice">
+          <p>image</p>
+          <p>Prison</p>
+        </div>
+      </div>
+    </section>
+    <section class="risks">
+      <h3>Biggest risks</h3>
+      <p>While other printers <strong>avoided</strong> controversial books, Plantin secretly printed them. His press
+        produced <strong>Protestant writings</strong>
+        and <strong>banned philosophical works</strong>. He used secret networks to distribute these books to readers
+        who wanted new ideas.</p>
+      <p class="one__risks">One of his biggest risks</p>
+      <p>was printing heretical materials that directly challenged the Catholic Church.</p>
+      <p>These texts were often smuggled across borders, <strong>hidden</strong> among other shipments. Plantin had to
+        be <strong>extremely careful</strong>, one
+        mistake could mean the end of his business or even his life.</p>
+      <p class="dangerous__description centered">He maintained good relations with Catholic authorities while still
+        finding ways to print forbidden books</p>
+      <p class="dangerous gold centered">Playing a Dangerous Double Game.</p>
+    </section>
+    <section class="interaction">
+      <p class="interaction__title">Would you be able to get away with illegal printing and distribution?</p>
+      <p class="hint">Shake your phone to roll the dice</p>
+      <div>
+        <p>img</p>
+        <p>img</p>
+      </div>
+      <p><strong>Double number</strong> You would
+        <strong>Otherwise</strong> You wouldn’t
+      </p>
+    </section>
+    <section class="protestants">
+      <h3>Printing
+        for protestants</h3>
+      <p class="centered">Plantin secretly printed books for Protestant customers despite the dangers posed by the
+        Catholic Church, which
+        viewed
+        Protestantism as a threat.</p>
+      <p>Demand for these books was high, as Protestants relied on hidden printing networks to access banned texts
+        like Bible
+        translations, sermons, and theological writings.</p>
+      <p>To avoid detection, Plantin disguised religious texts as scholarly works, used pseudonyms for authors, and
+        moved books
+        through secret trade routes.</p>
+      <p>Though he took great risks, Plantin’s success set him apart, with his books reaching Protestant communities
+        across Europe.</p>
+      <p>He skillfully maintained a working relationship with Catholic authorities, ensuring his business survived while
+        others
+        faced exile or financial ruin. His ability to navigate both sides allowed him to thrive in a time of religious
+        conflict.</p>
+    </section>
+    <section class="printing__stars">
+      <h3>Printing the stars</h3>
+      <p><strong>Astrology</strong> was another prints that the Catholic Church <strong>disapproved</strong>. Despite
+        this, Plantin <strong>saw an opportunity</strong> and printed
+        astrological books and calendars. These publications were <strong>highly profitable</strong>, but they also put
+        him at risk with
+        religious authorities.</p>
+      <p class="divine__will centered gold">The Church believed astrology interfered with faith and divine will,</p>
+      <p>many religious leaders accused astrologers and their publishers of <strong>misleading people</strong>. If
+        caught, Plantin could have lost
+        important Catholic customers. However, he continued because he knew these books sold well, helping to
+        <strong>keep his business
+          successful</strong>.
+      </p>
+      <p>These books provided guidance on <strong>farming</strong>, <strong>celestial events</strong>, and even
+        <strong>predicting the future</strong>. While some saw them as
+        <strong>dangerous</strong>, Plantin knew they were in demand and printed them to meet public interest.
+      </p>
+    </section>
+    <section class="printing__house">
+      <p class="centered">Plantin’s printing house</p>
+      <h2>Officina Plantiniana</h2>
+      <p class="centered">Becames one of the <strong>most respected</strong> in Europe. He printed religious texts, classic literature,
+        maps, and scientific books,
+        making his press a center for scholarship and <strong>intellectual exchange</strong>. More than just a printer,
+        Plantin was a businessman
+        who understood that <strong>sometimes, to make history, you have to focus on details, work hard and take
+          risks</strong>.</p>
+      <p class="centered">By the time of his death in 1589, his <strong>legacy was secure</strong>. His press remained <strong>in his
+          family’s hands</strong>, ensuring that his
+        name was remembered for generations.</p>
+        <div class="today__line"></div>
+      <p class="today centered">And today?</p>
+    </section>
+    <section>
+      <h2>the Museum</h2>
+      <p>Plantin-Moretus</p>
+      <p>Visitors can explore his historic printing house at the</p>
+      <p>the Museum Plantin-Moretus</p>
+      <p>in</p>
+      <p>Antwerp</p>
+      <p>To truly appreciate his impact, visit the Museum Plantin-Moretus and experience the world of Renaissance
+        printing
+        firsthand.</p>
+      <button>Visit</button>
+    </section>
+  </main>
+  <footer></footer>
+  <script src="./src/scripts/main.js"></script>
 </body>
 
 </html>
