--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../src/styles/reset.css">
-  <link rel="stylesheet" href="../src/styles/style.css">
+  <link rel="stylesheet" href="./src/styles/reset.css">
+  <link rel="stylesheet" href="./src/styles/style.css">
   <title>The Renaissance Hustler</title>
 </head>
 
@@ -300,7 +300,7 @@
     </section>
   </main>
   <footer></footer>
-  <script src="./src/scripts/main.js"></script>
+  <script type="module" src="./src/scripts/main.js"></script>
 </body>
 
 </html>
