--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
   <header>
-    <p>logo</p>
+    <img sizes="(min-width: 840px) 200px, (min-width: 400px) 150px, (min-width: 340px) 100px, calc(-250vw + 900px)" srcset="
+    ./src/assets/img/logo-small.avif 150w,
+    ./src/assets/img/logo-mid.avif 693w" src="./src/assets/img/logo-mid.avif" alt="Plantin-Moretus museum logo">
     <button>Visit</button>
     <div class="header">
       <p class="highlight__name">Christophe Plantin</p>
@@ -78,11 +80,29 @@
       <p class="hint"><strong class="hint">Hint</strong>: <br>You have limited time to print</p>
       <div class="book__choices">
         <div class="interaction__choice">
-          <p>images</p>
+          <picture>
+            <img
+              sizes="(min-width: 1400px) 450px, (min-width: 680px) calc(49.57vw - 18px), (min-width: 380px) calc(54.64vw - 52px), 133px"
+              srcset="
+          ./src/assets/img/many-books_200.avif 200w,
+          ./src/assets/img/many-books_558.avif 558w,
+          ./src/assets/img/many-books_807.avif 807w,
+          ./src/assets/img/many-books_1070.avif 1070w" src="./src/assets/img/many-books_1070.avif"
+              alt="multiple books">
+          </picture>
           <p>Printing 10 books</p>
         </div>
         <div class="interaction__choice">
-          <p>image</p>
+          <picture>
+            <img
+              sizes="(min-width: 1400px) 450px, (min-width: 680px) calc(49.57vw - 18px), (min-width: 380px) calc(54.64vw - 52px), 133px"
+              srcset="
+        ./src/assets/img/one-book_200.avif 200w,
+        ./src/assets/img/one-book_511.avif 511w,
+        ./src/assets/img/one-book_768.avif 768w,
+        ./src/assets/img/one-book_1010.avif 1010w,
+        ./src/assets/img/one-book_1070.avif 1070w" src="./src/assets/img/one-book_1070.avif" alt="one perfect book">
+          </picture>
           <p>Printing 1 perfect book</p>
         </div>
       </div>
@@ -91,6 +111,13 @@
       <h2>Quality
         over
         Quantity</h2>
+      <picture>
+        <img sizes="(min-width: 1440px) 1290px, calc(93.57vw - 39px)" srcset="
+        ./src/assets/img/abook_200.avif 200w,
+        ./src/assets/img/abook_718.avif 718w,
+        ./src/assets/img/abook_1219.avif 1219w,
+        ./src/assets/img/abook_1290.avif 1290w" src="./src/assets/img/abook_1290.avif" alt="a perfect book">
+      </picture>
       <p>Many printers rushed to <strong>produce large quantities</strong>, Plantin focused on <strong>quality</strong>,
         ensuring that his books stood out in an
         increasingly competitive market.</p>
@@ -172,6 +199,12 @@
     <section class="hustles">
       <h2>Plantin’s Hustles</h2>
       <p class="narrow__left">To keep his business successful, Plantin had to be <strong>strategic</strong>.</p>
+      <picture>
+        <img sizes="(min-width: 2040px) 894px, (min-width: 520px) 400px, (min-width: 400px) calc(40vw + 200px), (min-width: 340px) 51px, calc(-1045vw + 3395px)" srcset="
+      ./src/assets/img/light_200.avif 200w,
+      ./src/assets/img/light_894.avif 894w,
+      ./src/assets/img/light_1080.avif 1080w" src="./src/assets/img/light_1080.avif" alt="light">
+      </picture>
       <p>While he presented himself as a <strong>faithful Catholic</strong>, he secretly expanded his business into
         areas that were risky but
         profitable.</p>
@@ -274,16 +307,19 @@
     <section class="printing__house">
       <p class="centered">Plantin’s printing house</p>
       <h2>Officina Plantiniana</h2>
-      <p class="centered">Becames one of the <strong>most respected</strong> in Europe. He printed religious texts, classic literature,
+      <p class="centered">Becames one of the <strong>most respected</strong> in Europe. He printed religious texts,
+        classic literature,
         maps, and scientific books,
         making his press a center for scholarship and <strong>intellectual exchange</strong>. More than just a printer,
         Plantin was a businessman
         who understood that <strong>sometimes, to make history, you have to focus on details, work hard and take
           risks</strong>.</p>
-      <p class="centered">By the time of his death in 1589, his <strong>legacy was secure</strong>. His press remained <strong>in his
+      <p class="centered">By the time of his death in 1589, his <strong>legacy was secure</strong>. His press remained
+        <strong>in his
           family’s hands</strong>, ensuring that his
-        name was remembered for generations.</p>
-        <div class="today__line"></div>
+        name was remembered for generations.
+      </p>
+      <div class="today__line"></div>
       <p class="today centered">And today?</p>
     </section>
     <section>
