working on image responsivness

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
   <header>
-    <img sizes="(min-width: 840px) 200px, (min-width: 400px) 150px, (min-width: 340px) 100px, calc(-250vw + 900px)" srcset="
+    <img sizes="(min-width: 840px) 200px, (min-width: 400px) 150px, (min-width: 340px) 100px, calc(-250vw + 900px)"
+      srcset="
     ./src/assets/img/logo-small.avif 150w,
     ./src/assets/img/logo-mid.avif 693w" src="./src/assets/img/logo-mid.avif" alt="Plantin-Moretus museum logo">
     <button>Visit</button>
@@ -174,6 +175,39 @@
       </div>
     </section>
     <section>
+      <div class="bibles">
+        <picture class="hide">
+          <img sizes="(min-width: 1520px) 348px, calc(23.58vw - 6px)" srcset="
+              ./src/assets/img/polyglot_250.avif 250w,
+              ./src/assets/img/polyglot_855.avif 855w,
+              ./src/assets/img/polyglot_1630.avif 1630w,
+              ./src/assets/img/polyglot_2100.avif 2100w" src="./src/assets/img/polyglot_2100.avif" alt="Plyglot bible">
+        </picture>
+        <picture>
+          <img sizes="(min-width: 1520px) 348px, calc(23.58vw - 6px)" srcset="
+                      ./src/assets/img/polyglot_250.avif 250w,
+                      ./src/assets/img/polyglot_855.avif 855w,
+                      ./src/assets/img/polyglot_1630.avif 1630w,
+                      ./src/assets/img/polyglot_2100.avif 2100w" src="./src/assets/img/polyglot_2100.avif"
+            alt="Plyglot bible">
+        </picture>
+        <picture>
+          <img sizes="(min-width: 1520px) 348px, calc(23.58vw - 6px)" srcset="
+                      ./src/assets/img/polyglot_250.avif 250w,
+                      ./src/assets/img/polyglot_855.avif 855w,
+                      ./src/assets/img/polyglot_1630.avif 1630w,
+                      ./src/assets/img/polyglot_2100.avif 2100w" src="./src/assets/img/polyglot_2100.avif"
+            alt="Plyglot bible">
+        </picture>
+        <picture class="hide">
+          <img sizes="(min-width: 1520px) 348px, calc(23.58vw - 6px)" srcset="
+                      ./src/assets/img/polyglot_250.avif 250w,
+                      ./src/assets/img/polyglot_855.avif 855w,
+                      ./src/assets/img/polyglot_1630.avif 1630w,
+                      ./src/assets/img/polyglot_2100.avif 2100w" src="./src/assets/img/polyglot_2100.avif"
+            alt="Plyglot bible">
+        </picture>
+      </div>
       <p class="centered">One of his greatest achievements was</p>
       <h3 class="gold">Polyglot Bible</h3>
       <p>image</p>
@@ -200,7 +234,9 @@
       <h2>Plantin’s Hustles</h2>
       <p class="narrow__left">To keep his business successful, Plantin had to be <strong>strategic</strong>.</p>
       <picture>
-        <img sizes="(min-width: 2040px) 894px, (min-width: 520px) 400px, (min-width: 400px) calc(40vw + 200px), (min-width: 340px) 51px, calc(-1045vw + 3395px)" srcset="
+        <img
+          sizes="(min-width: 2040px) 894px, (min-width: 460px) 379px, (min-width: 340px) calc(76vw + 42px), calc(-1045vw + 3395px)"
+          srcset="
       ./src/assets/img/light_200.avif 200w,
       ./src/assets/img/light_894.avif 894w,
       ./src/assets/img/light_1080.avif 1080w" src="./src/assets/img/light_1080.avif" alt="light">
@@ -218,23 +254,53 @@
       <p class="hint"><strong class="hint">Hint</strong>: <br>there are only 3 right options</p>
       <div class="choices">
         <div class="interaction__choice">
-          <p>image</p>
+          <picture>
+            <img
+              sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
+              srcset="
+          ./src/assets/img/fines_130.avif 130w,
+          ./src/assets/img/fines_480.avif 480w" src="./src/assets/img/fines_480.avif" alt="">
+          </picture>
           <p>Heavy fines</p>
         </div>
         <div class="interaction__choice">
-          <p>image</p>
+          <picture>
+            <img
+              sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
+              srcset="
+          ./src/assets/img/death_130.avif 130w,
+          ./src/assets/img/death_480.avif 480w" src="./src/assets/img/death_480.avif" alt="">
+          </picture>
           <p>Death</p>
         </div>
         <div class="interaction__choice">
-          <p>image</p>
+          <picture>
+            <img
+              sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
+              srcset="
+          ./src/assets/img/banishment_130.avif 130w,
+          ./src/assets/img/banishment_480.avif 480w" src="./src/assets/img/banishment_480.avif" alt="">
+          </picture>
           <p>Banishment</p>
         </div>
         <div class="interaction__choice">
-          <p>image</p>
+          <picture>
+            <img
+              sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
+              srcset="
+          ./src/assets/img/sorry_130.avif 130w,
+          ./src/assets/img/sorry_480.avif 480w" src="./src/assets/img/sorry_480.avif" alt="Plantin apologies">
+          </picture>
           <p>Public apology</p>
         </div>
         <div class="interaction__choice">
-          <p>image</p>
+          <picture>
+            <img
+              sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
+              srcset="
+          ./src/assets/img/prison_130.avif 130w,
+          ./src/assets/img/prison_480.avif 480w" src="./src/assets/img/prison_480.avif" alt="dead Plantin">
+          </picture>
           <p>Prison</p>
         </div>
       </div>
