working with responsive images and svg

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       </div>
     </section>
     <section class="interaction">
+      <div class="top__corner">
+        <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="100">
+      </div>
+      <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">If you would be a printer <br> what would you choose?</p>
       <p class="hint"><strong class="hint">Hint</strong>: <br>You have limited time to print</p>
       <div class="book__choices">
@@ -106,6 +110,9 @@
           </picture>
           <p>Printing 1 perfect book</p>
         </div>
+      </div>
+      <div class="bottom__corner">
+        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
       </div>
     </section>
     <section class="quality">
@@ -139,8 +146,15 @@
       </div>
     </section>
     <section class="interaction">
+      <div class="top__corner">
+        <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="100">
+      </div>
+      <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Set letters for printing<br>Plantin’s name</p>
       <p class="hint"><strong class="hint">Hint</strong>: <br>Letters used to be set upside down and mirror view.</p>
+      <div class="bottom__corner">
+        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+      </div>
     </section>
     <section class="high__standards">
       <div class="standards__intro">
@@ -221,6 +235,10 @@
         innovation.</p>
     </section>
     <section class="interaction">
+      <div class="top__corner">
+        <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="100">
+      </div>
+      <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Guess in how many languages Polyglot bible was written?</p>
       <p class="hint"><strong class="hint">Hint</strong>: <br>one digit</p>
       <form class="languages" id="numberForm">
@@ -229,6 +247,9 @@
         <p class="hint">type in the number</p>
         <button class="submit__button" type="submit">Check!</button>
       </form>
+      <div class="bottom__corner">
+        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+      </div>
     </section>
     <section class="hustles">
       <h2>Plantin’s Hustles</h2>
@@ -250,10 +271,14 @@
         these risks.</p>
     </section>
     <section class="interaction">
+      <div class="top__corner">
+        <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="100">
+      </div>
+      <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Choose which ones would be those consequences</p>
       <p class="hint"><strong class="hint">Hint</strong>: <br>there are only 3 right options</p>
       <div class="choices">
-        <div class="interaction__choice">
+        <div class="consequences__choice">
           <picture>
             <img
               sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
@@ -263,7 +288,7 @@
           </picture>
           <p>Heavy fines</p>
         </div>
-        <div class="interaction__choice">
+        <div class="consequences__choice">
           <picture>
             <img
               sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
@@ -273,7 +298,7 @@
           </picture>
           <p>Death</p>
         </div>
-        <div class="interaction__choice">
+        <div class="consequences__choice">
           <picture>
             <img
               sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
@@ -283,7 +308,7 @@
           </picture>
           <p>Banishment</p>
         </div>
-        <div class="interaction__choice">
+        <div class="consequences__choice">
           <picture>
             <img
               sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
@@ -293,7 +318,7 @@
           </picture>
           <p>Public apology</p>
         </div>
-        <div class="interaction__choice">
+        <div class="consequences__choice">
           <picture>
             <img
               sizes="(min-width: 1720px) 250px, (min-width: 1340px) calc(6.11vw + 146px), (min-width: 640px) calc(17.65vw - 7px), 98px"
@@ -303,6 +328,9 @@
           </picture>
           <p>Prison</p>
         </div>
+      </div>
+      <div class="bottom__corner">
+        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
       </div>
     </section>
     <section class="risks">
@@ -321,15 +349,26 @@
       <p class="dangerous gold centered">Playing a Dangerous Double Game.</p>
     </section>
     <section class="interaction">
+      <div class="top__corner">
+        <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="100">
+      </div>
+      <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Would you be able to get away with illegal printing and distribution?</p>
       <p class="hint">Shake your phone to roll the dice</p>
-      <div>
-        <p>img</p>
-        <p>img</p>
+      <div class="dices">
+        <img src="./src/assets/svg/dice-dots-2.svg" srcset="
+            ./src/assets/svg/dice-dots-2-small.svg 155w,
+            ./src/assets/svg/dice-dots-2.svg 300w" sizes="(max-width: 640px) 100px, 200px" alt="Dice with 2 dots">
+        <img src="./src/assets/svg/dice-dots-5.svg" srcset="
+            ./src/assets/svg/dice-dots-5-small.svg 155w,
+            ./src/assets/svg/dice-dots-5.svg 300w" sizes="(max-width: 640px) 100px, 200px" alt="Dice with 5 dots">
       </div>
       <p><strong>Double number</strong> You would
         <strong>Otherwise</strong> You wouldn’t
       </p>
+      <div class="bottom__corner">
+        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+      </div>
     </section>
     <section class="protestants">
       <h3>Printing
@@ -388,17 +427,30 @@
       <div class="today__line"></div>
       <p class="today centered">And today?</p>
     </section>
-    <section>
+    <div class="line"></div>
+    <div class="line"></div>
+    <section class="museum">
+      <div class="top__corner">
+        <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="100">
+      </div>
       <h2>the Museum</h2>
-      <p>Plantin-Moretus</p>
-      <p>Visitors can explore his historic printing house at the</p>
-      <p>the Museum Plantin-Moretus</p>
-      <p>in</p>
-      <p>Antwerp</p>
-      <p>To truly appreciate his impact, visit the Museum Plantin-Moretus and experience the world of Renaissance
+      <p class="highlight__name">Plantin-Moretus</p>
+      <p class="centered narrow">Visitors can explore his historic printing house at the</p>
+      <p class="light__highlight centered">the Museum Plantin-Moretus</p>
+      <p class="centered">in</p>
+      <p class="light__highlight centered">Antwerp</p>
+      <p class="centered narrow">To truly appreciate his impact, visit the Museum Plantin-Moretus and experience the
+        world of Renaissance
         printing
         firsthand.</p>
-      <button>Visit</button>
+      <div class="button__position">
+        <div class="button__wrapper">
+          <button class="visit">Visit</button>
+        </div>
+      </div>
+      <div class="bottom__corner">
+        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+      </div>
     </section>
   </main>
   <footer></footer>
