--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       srcset="
     ./src/assets/img/logo-small.avif 150w,
     ./src/assets/img/logo-mid.avif 693w" src="./src/assets/img/logo-mid.avif" alt="Plantin-Moretus museum logo">
-    <!-- <button class="hamburger" aria-label="Toggle navigation">
+    <button class="hamburger" aria-label="Toggle navigation">
       <span class="line"></span>
       <span class="line"></span>
       <span class="line"></span>
@@ -33,7 +33,7 @@
         <li>Plantin's hustles</li>
         <li>Officina Plantiniana</li>
       </ul>
-    </nav> -->
+    </nav>
 
   </header>
   <main>
